apps/argocd-install/argocd-repo-server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      containers:
      - name: argocd-repo-server
        # Built from apps/argocd-install/plugin Jun 16, 2022
        image: ghcr.io/data-for-change/data-for-change-k8s-argocd:123456
        volumeMounts:
        - name: custom-tools
          mountPath: /usr/local/bin/argocd-data-for-change-plugin
          subPath: argocd-data-for-change-plugin
      volumes:
      - name: custom-tools
        emptyDir: {}
      automountServiceAccountToken: true
      serviceAccountName: argocd-server
