apps/argocd-install/ingress-grpc.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: argocd-server-grpc
spec:
  ingressClassName: nginx
  rules:
  - host: argocd-grpc.dataforchange.org.il
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              name: https
        pathType: Prefix
        path: /
