apps/argocd-install/ingress-https.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: argocd-server-https
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.dataforchange.org.il
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              name: http
        pathType: Prefix
        path: /
